Fixes for z-index in maps & fix for a bug of the map in chrome

--- a/resources/sass/site2.scss
+++ b/resources/sass/site2.scss
@@ -918,10 +918,13 @@ form.vertical, .fields-vertical {
     height: calc(100% + 24px);
     min-width: 500px;
     margin: -24px -24px 0 0;
+    * {
+      z-index: 0;
+    }
 
     > div {
       width: 100%;
-      height: 100%;
+      // height: 100%;
     }
   }
 }
